oss/linkwarden/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-svc
  namespace: linkwarden
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: linkwarden
