oss/linkwarden/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden
  namespace: linkwarden
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/large-client-header-buffers: "4 16k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.stdtrinfra.com"
      secretName: stdtrinfra-tls
  rules:
    - host: bookmark.stdtrinfra.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkwarden-svc
                port:
                  number: 3000
